# cubli_sim

./: Dockerfile  run_sim.sh
cubli_description/: CMakeLists.txt  package.xml
cubli_description/config/: cubli.rviz
cubli_description/launch/: cubli_description.launch.py  rviz.launch.py
cubli_description/model/: model.config
cubli_description/model/meshes/: ec45_flat.stl  flywheel.stl  frame.stl  motor_mount.stl  shaft_hub_mount.stl
cubli_description/model/xacro/: axis.xacro  cubli.xacro  materials.xacro
cubli_gazebo/: CMakeLists.txt  package.xml
cubli_gazebo/config/: gazebo.yaml  ros2_control.yaml
cubli_gazebo/launch/: .cubli.launch.py.swp  cubli.launch.py
cubli_gazebo/worlds/: flat.world
cubli_gazebo/xacro/: cubli.xacro
